src/test/deca/context/invalid/thisInMain.deca
// Description:
//    void type in params
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	int x;
}

{
	A a = new A();
	this.a = x;
}

